# fastapi_template

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.yml  doppler.yaml  pyproject.toml
app/: main.py
deployment/: docker-compose.infra.yml
deployment/rabbitmq/: rabbitmq.conf
deployment/rest_server/: Dockerfile
lib/core/: auth_bearer.py  postgres_connector.py
lib/rest_server/: auth_bearer.py  context.py  middlewares.py
rest_server/: main.py  test_api.py
