[tool.poetry]
name = "fastapi_template"
version = "0.1.1"
description = "Template repo for fastapi backend"
authors = ["madhukar01 <mholla8@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
asyncpg = "^0.30.0"
structlog = "^24.4.0"
pottery = "^3.0.0"
python-jose = "^3.3.0"
gunicorn = "^23.0.0"
pypika = "^0.48.9"


[tool.poetry.group.dev.dependencies]
types-redis = "^4.6.0.20241004"
asyncpg-stubs = "^0.30.0"
types-python-jose = "^3.3.4.20240106"
pytest-asyncio = "^0.21.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
ruff = "^0.1.0"
mypy = "^1.6.0"
doppler-env = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 80
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "C4", "T20", "PT", "RET", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assertions in test files

[tool.ruff.isort]
known_first_party = ["rest_server"]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
